PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-99_soustraction_invalide1/gcc-compile.txt
input.c:3:13: error: expression is not assignable
    return 2--1;
           ~^
input.c:3:15: error: expected ';' after return statement
    return 2--1;
              ^
              ;
2 errors generated.

return code: 1
